simulation-scripts/scenario/build-a-backdoor/apply/06-scenario-resources.yaml
## Attach Container
apiVersion: v1
kind: Namespace
metadata:
  name: ii-prod
---
apiVersion: v1
kind: Pod
metadata:
  name: ii-management-services
  namespace: ii-prod
  labels:
    app: ii
spec:
  containers:
  - name: mgmt-service
    image: ttl.sh/iiapp-664hf92-wakeward:6h
    ports:
    - containerPort: 8080
      name: mgmt
    - containerPort: 5724
      name: admin
    securityContext:
      allowPrivilegeEscalation: false
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mgmt-service
  namespace: ii-prod
spec:
  selector:
    app: ii
  ports:
  - name: mgmt
    port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ii-mgmt-np
  namespace: ii-prod
spec:
  podSelector:
    matchLabels:
      app: ii
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 8080
---
## JumpBox Resources
apiVersion: v1
kind: Namespace
metadata:
  name: dmz
---
apiVersion: v1
kind: Pod
metadata:
  name: jumpbox-terminal
  namespace: dmz
spec:
  serviceAccountName: sre
  containers:
  # basic container image
  - image: docker.io/controlplaneoffsec/kubectl:latest
    command: ["sleep", "2d"]
    name: jumpbox-terminal
    securityContext:
      allowPrivilegeEscalation: false
  restartPolicy: Always
